# thread-sync

./: .dockerignore  .gitignore  README.md  clickhouse_password.txt  minio_secret_key.txt  pagerduty_key.txt  slack_webhook_url.txt  smtp_password.txt
.github/workflows/: ci.yml
.qwen/: settings.json
alert-seeder/: seed_alerts.py
alerting/: alertmanager.yaml  prometheus-rules.yaml
alerting/templates/: siem.tmpl
case-management/: .golangci.yml  README.md  go.mod
case-management-rs/: Cargo.toml
case-management-rs/migrations/: 002_process_investigation.sql
case-management-rs/src/: alertmanager.rs  handlers.rs  main.rs  models.rs  portal_notify.rs  store.rs  validate.rs
case-management/web/: embed.go  index.html  package-lock.json  package.json
clickhouse/: 02-kafka_ingest.sql  init.sql
deploy/docker/: .env.example  Dockerfile.admin  Dockerfile.casemgmt  Dockerfile.detection  Dockerfile.intel  Dockerfile.loggen  Dockerfile.parser  Dockerfile.portal  Dockerfile.stress  docker-compose.override.yml  docker-compose.yml  loki-config.yaml  prometheus.yml  promtail-config.yaml
deploy/k8s/: clickhouse-statefulset.yaml  configmap.yaml  correlator-deployment.yaml  detection-engine-deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  redpanda-statefulset.yaml  secret.yaml  services.yaml  siem-parser-deployment.yaml  vector-aggregator-deployment.yaml
detection-engine/: .golangci.yml  Dockerfile  README.md  go.mod  go.sum
detection-engine-rs/: Cargo.toml
detection-engine-rs/src/: alert.rs  engine.rs  event.rs  lib.rs  metrics.rs  state_store.rs
detection-engine-rs/src/rules/: brute_force.rs  command_injection.rs  credential_stuffing.rs  data_exfiltration.rs  error_spike.rs  mod.rs  path_traversal.rs  privilege_escalation.rs  rate_limit.rs  sql_injection.rs  ssrf.rs  unusual_http_methods.rs  xss.rs
docs/: ARCHITECTURE.md  DATA_PROMETHEUS_GRAFANA.md  INTEL_CONNECTOR.md  Idea.md  README.md  RISKS_AND_ROADMAP.md  RUNBOOK.md  SCHEMA.md  SIEM_OPERATOR_MEGA_PITCH.md  SIEM_PORTAL.md  STACK.md  presentation-prompt.md
grafana/dashboards/: clickhouse-advanced-monitoring.json  clickhouse-data-analysis.json  clickhouse-query-analysis.json  (+15 more)
intel-connector/: README.md  requirements.txt
log-generator/: Cargo.toml
log-generator/src/: main.rs
rust-parser/: Cargo.toml
rust-parser/benches/: parse_benchmark.rs
rust-parser/src/: config.rs  enrichment.rs  error.rs  lib.rs  main.rs  metrics.rs  normalizer.rs  parser.rs  parser_tests.rs  pii.rs  schema.rs
rust-parser/tests/: integration_test.rs
scripts/: add_loki_logs_panels.py  check-dashboards.ps1  cleanup-grafana-imported-dashboards.ps1  fill-dashboard-data.ps1  fix_format_datetime_minutes.py  generate-certs.sh  init-secrets.ps1  siem-attack-requirements.txt  siem-attack.py  update-geoip.sh
siem-admin/: Cargo.toml
siem-admin/src/: main.rs
siem-admin/static/: index.html
siem-desktop/: Cargo.toml  tauri.conf.json
siem-desktop/capabilities/: default.json
siem-desktop/frontend/: index.html
siem-desktop/src/: lib.rs  main.rs
siem-operator/: Cargo.toml  README.md  operator-state.json
siem-operator/src/: lib.rs  main.rs  models.rs  theme.rs
siem-operator/src/app/: bootstrap.rs  metrics.rs  mod.rs  panels.rs  state.rs  types.rs
siem-operator/src/ui/: widgets.rs
siem-portal/: Cargo.toml
siem-portal/src/: alerts.rs  config.rs  data_quality.rs  detections.rs  event_search.rs  handlers.rs  infrastructure.rs  main.rs  operations.rs  overview.rs  query_helpers.rs  realtime.rs
siem-portal/static/: app.css  app.js  index.html
siem-portal/static/assets/: AdaptivePaneLayout-BYW4ypa2.js  AdaptivePaneLayout-DmbDm-ZR.js  AlertsPage-5lSDw9R4.js  AlertsPage-Bw6oH7Cf.js  AlertsPage-CvRHTWxU.js  AlertsPage-D7FKfJyG.js  AlertsPage-DZ07AFBA.js  AlertsPage-DiPM2zRh.js  AlertsPage-RFh-NKUW.js  CaseDetail-B6CHfCRi.js  CaseDetail-BOleIcHX.js  CaseDetail-BtpXivQ6.js  CaseDetail-Cer5IXid.js  CaseDetail-Cy5B5nEh.js  CaseDetail-DtUzL2Lw.js  CasesList-B7M_YRNm.js  CasesList-ByiGgBki.js  CasesList-CjWGfGRd.js  CasesList-DCg_gb-6.js  CasesList-V3WNFq3R.js  CasesList-wcIvF7Wy.js  DashboardToolbar-Bdsi3oPj.js  DashboardToolbar-BzyRDG-f.js  DashboardToolbar-CxMFvgnM.js  DashboardToolbar-Dpoe0qLC.js  DashboardToolbar-DwkkfYKx.js  DashboardToolbar-yBc-MXst.js  DashboardToolbar-yMGUnN26.js  DashboardsPage-BFaGxs0f.js  DashboardsPage-BQLbBv4p.js  DashboardsPage-BzltCHGW.js  DashboardsPage-CQhN4z03.js  DashboardsPage-CptZmzxI.js  DashboardsPage-D1_gwFge.js  DashboardsPage-bce5uj0W.js  DataQualityPage-C1mbr0GK.js  DataQualityPage-DAVSfZK6.js  DataQualityPage-IiVeL1rM.js  DataQualityPage-MptIjXt4.js  DataQualityPage-_y011JWx.js  (+103 more)
siem-portal/web/: index.html  package-lock.json  package.json  vite.config.ts
siem-portal/web/scripts/: clean-static.mjs
siem-portal/web/src/: App.tsx  api.ts  chart-preferences.ts  dashboard-catalog.ts  dashboard-utils.ts  main.tsx  perf-debug.ts  styles.css  suite-meta.ts  suite-polling.ts  tauri-bridge.ts
siem-portal/web/src/components/: AdaptivePaneLayout.tsx  ChartMotionContext.tsx  CommandPalette.tsx  DashboardToolbar.tsx  LiveNumbers.tsx  MotionStatCard.tsx  NativeCharts.tsx  PageLayout.tsx  PerfDebugContext.tsx  PerfOverlay.tsx  ShellIcon.tsx  SuiteCommandContext.tsx  TauriPanel.tsx  WorkspaceShellContext.tsx
siem-portal/web/src/components/echarts/: ObservabilityCharts.tsx
siem-portal/web/src/hooks/: useSuitePolling.ts
siem-portal/web/src/pages/: AlertsPage.tsx  CaseDetail.tsx  CasesList.tsx  DashboardsPage.tsx  DataQualityPage.tsx  DetectionsPage.tsx  EventsPage.tsx  InfrastructurePage.tsx  InvestigationWorkbench.tsx  OperationsPage.tsx  OverviewPage.tsx  ValidationPage.tsx
siem-portal/web/src/realtime/: SuiteRealtimeProvider.tsx  topics.ts
siem-tools/: Cargo.toml
siem-tools/src/: alert_seed.rs  grafana.rs  main.rs
sigma-rules/: brute_force_api.yaml  privilege_escalation.yaml  rate_limit_evasion.yaml  sql_injection.yaml
stress/: Cargo.toml
stress/src/: main.rs
tests/: requirements.txt
vector/: agent.yaml  aggregator.yaml
(+82 files in other folders)
