[package]
name = "detection-engine-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "detector"
path = "src/bin/detector.rs"

[[bin]]
name = "correlator"
path = "src/bin/correlator.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdkafka = { version = "0.36", features = ["cmake-build"] }
redis = { version = "0.25", features = ["tokio-comp"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
prometheus = "0.13"
axum = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
ahash = "0.8"
async-trait = "0.1"
regex = "1"
