[package]
name = "siem-log-generator"
version = "0.1.0"
edition = "2021"
description = "Continuous demo log generator for SIEM-Lite → Vector HTTP ingest"
license = "Apache-2.0"

[[bin]]
name = "siem-log-generator"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
strip = true
