[package]
name = "siem-parser"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["SIEM-Lite Team"]
description = "High-performance log parser and normalizer for SIEM-Lite"
license = "Apache-2.0"

[[bin]]
name = "siem-parser"
path = "src/main.rs"

[lib]
name = "siem_parser"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.51", features = ["full"] }

# Сериализация
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

# HTTP сервер для health/metrics
axum = { version = "0.8", features = ["tokio"] }

# Kafka producer (rdkafka обёртка)
rdkafka = { version = "0.39", features = ["cmake-build", "ssl", "gssapi"] }

# PII маскирование — DFA regex без backtracking
regex-automata = { version = "0.4", features = ["dfa", "perf"] }
regex-syntax = "0.8"

# GeoIP — mmap режим: нулевые копии, файл отображается в память ОС
maxminddb = { version = "0.27", features = ["mmap"] }
memmap2 = "0.9"

# UUID
uuid = { version = "1.23", features = ["v4", "fast-rng", "serde"] }

# Временны́е метки
chrono = { version = "0.4", features = ["serde"] }

# Метрики
prometheus = { version = "0.14", features = ["process"] }

# Логирование
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Ошибки
thiserror = "2.0"
anyhow = "1.0"

# Конфигурация
config = { version = "0.15", features = ["toml"] }

# Производительность
bytes = "1.11"
itoa = "1"

# Moka cache для enrichment (встроенный TTL, thread-safe, без Mutex)
moka = { version = "0.12", features = ["sync"] }

# Threat intel: SISMEMBER по SET из intel-connector (опционально)
# Без TLS к Redis (внутренняя сеть Docker); иначе на Windows тянется openssl-sys.
# Без TLS к Redis; `keep-alive` — TCP-клиент без openssl (внутренняя сеть).
redis = { version = "0.32", default-features = false, features = ["keep-alive", "aio", "tokio-comp"] }

# Lazy static init
once_cell = "1.21"

# CPU count для дефолтного числа воркеров
num_cpus = "1.17"

# HTTP клиент для webhook→ClickHouse (alerts ingest)
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tokio-test = "0.4"
proptest = "1.11"

[[bench]]
name = "parse_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.release.package.regex-automata]
opt-level = 3

[profile.bench]
opt-level = 3
debug = true
