[package]
name = "siem-admin"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bollard = "0.20"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "query"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
