[package]
name = "siem-desktop"
version = "0.1.0"
description = "SIEM-Lite Desktop — Tauri-based operator application"
authors = ["SIEM-Lite"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", default-features = true }
dirs = "6"
