[package]
name = "siem-operator"
version = "0.1.0"
edition = "2021"
description = "Нативное десктоп-приложение для оператора SIEM-Lite (API case-management)"

[dependencies]
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui = "0.29"
egui_plot = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
webbrowser = "1"
chrono = { version = "0.4", default-features = true }
