[package]
name = "siem-operator"
version = "0.1.0"
edition = "2021"
description = "SIEM-Lite Operator: один exe — egui по умолчанию, --web для окна с SIEM Portal"

[dependencies]
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui = "0.29"
egui_plot = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
webbrowser = "1"
chrono = { version = "0.4", default-features = true }
wry = "0.55.0"
tao = "0.35.0"
