[package]
name = "siem-portal"
version = "0.1.0"
edition = "2021"
description = "Unified SOC console: aggregates siem-lite APIs (Prometheus, Alertmanager, case-management) without reimplementing them"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
anyhow = "1"
