[package]
name = "siem-portal"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Unified SOC console: aggregates siem-lite APIs (Prometheus, Alertmanager, case-management) without reimplementing them"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
anyhow = "1"
