[package]
name = "siem-portal"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Unified SOC console: aggregates siem-lite APIs (Prometheus, Alertmanager, case-management) without reimplementing them"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
anyhow = "1"
rust-embed = "8"
mime_guess = "2"
