[package]
name = "siem-tools"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "SOC utilities: alert seeding, future replacements for Python/shell helpers"
license = "Apache-2.0"

[[bin]]
name = "siem-tools"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
rand = "0.10"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
