[package]
name = "siem-stress"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Stress and attack generator for SIEM-Lite dashboards"
license = "Apache-2.0"

[[bin]]
name = "siem-stress"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.10"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.51", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.23", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
strip = true
